--- a/Grab/styles.css
+++ b/Grab/styles.css
@@ -6,13 +6,18 @@ a{
   text-decoration: none;
 }
 
+img{
+  max-width: 100%;
+  display: block;
+}
+
 input{
   height: 50px;
   border-radius: 20px;
   margin: 18px 0 0 0;
-  border-color: #FFFFFF;
+  border: 1px solid #FFFFFF;
   background: transparent;
-  padding: 0;
+  padding: 20px;
 }
 
 button{
@@ -35,28 +40,27 @@ img{
 }
 
 body {
-  background: #4E5BEE;
+  margin: 0;
+  display: inline-block;
 }
 
 .container{
-  max-width: 600px;
-  height: auto;
+  background-color: #4e5bee;
+  max-width: 800px;
+  width: 100vw;
+  height: 100vh;
+  margin: 0 auto;
 }
 
-.container-lay{
-  width: 240px;
-  margin: 0 auto;
-}
 .logo {
-  display: flex;
-  width: 160px;
+  width: 150px;
   margin: 0 auto;
-  height: 150px;
+  height: 200px;
+  display: flex;
   align-items: flex-end;
 }
 
 .formulario{
-  width: 240px;
   height: 300px;
   display: flex;
   align-items: center;
@@ -87,4 +91,42 @@ body {
   letter-spacing: 0em;
   text-align: center;
   color: #FFFFFF;
+}
+
+.image{
+  display: none;
+}
+
+@media(min-width: 800px){
+  body{
+    background: #ffffff;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-family: "Montserant", sans-serif;
+    height: 100vh;
+    overflow-y: hidden;
+  }
+
+  .container{
+    background-color: #4e5bee;
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    left: 0;
+    width: 300px;
+    z-index: 1;
+  }
+  .image{
+    height: 100%;
+    float: right;
+    object-fit: fill;
+    display: block;
+  }
+}
+
+@media(min-width: 1100px){
+  .container{
+    width: 500px;
+  }
 }
