--- a/Grab/styles.css
+++ b/Grab/styles.css
@@ -46,8 +46,9 @@ button{
   line-height: 21px;
   letter-spacing: 0em;
   text-align: center;
-  border-color: #FFFFFF;
+  border: 1px solid #FFFFFF;
   margin-top: 18px;
+  cursor: pointer;
 }
 
 img{
